--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^1.0.0 # help us to use SVG in our app
+  flutter_svg: ^0.20.0-nullsafety.3 # help us to use SVG in our app
   provider: ^6.0.2 # for State management
 
 
